[project @ 2004-10-08 14:27:26 by rlubke] Removed trim() call when processing body content - verbatim should be verbatim.
SECTION: Modified Files
-------------------------
M src/com/sun/faces/taglib/jsf_core/VerbatimTag.java
  - removed trim() call when procesing tag bodycontent
  - Replaced boolean ctor call with valueOf().booleanValue()
M systest/web/golden/verbatim_test.txt
  - updated gf to reflect changes

Reviewed by: r=rogerk

Original author: rlubke
Date: 2004-10-08 14:27:26+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@2983 761efcf2-d34d-6b61-9145-99dcacc3edf1